fixed doing bootstrap rows completely wrong, added styling to user login status box

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,63 +9,52 @@
         <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
         <link type="text/css" rel="stylesheet" href="css/basicblogstyle.css">
 
-
-
-
     </head>
 
     <body>
 
         <div class="container-fluid">
 
-            <row>
+            <div class="row">
 
+                <div class="col-md-8">
 
+                    <div class="top-logo">
 
-                    <div class="col-md-12">
+                        <h1> Basic Blog </h1>
 
-                        <div class="top">
-                            <row>
-                                <div class="col-md-8">
-                                    <div class="top-logo">
+                    </div>
 
-                                        <h1> Basic Blog </h1>
+                </div>
 
-                                    </div>
+                <div class="col-md-4">
 
-                                </div>
+                    <div class="user-controls">
 
-                                <div class="col-md-4">
-                                    <div class="user-controls">
-
-                                        login stuff here
-
-                                    </div>
-
-
-                                </div>
-
-
-                            </row>
-
-                        </div>
+                        <h3>login stuff here</h3>
 
                     </div>
 
 
+                </div>
 
-            </row>
+            </div>
+
+            <!-- Main Content Pane Starts Here -->
 
 
-            <row>
+            <div class="row">
 
-            <div class="bottom">
 
-                <div class="col-md-12 bot">
+                <div class="row">
 
-                    <div class="content-pane">
+                    <div class="col-md-12">
 
-                        <p> Not The Top </p>
+                        <div class="content-pane">
+
+                            <p> Not The Top </p>
+
+                        </div>
 
                     </div>
 
@@ -73,16 +62,7 @@
 
             </div>
 
-            </row>
-
-        {% block contentz %}
-
-        {% endblock %}
-
-
         </div>
-
-
 
     </body>
 
