--- a/css/basicblogstyle.css
+++ b/css/basicblogstyle.css
@@ -1,26 +1,16 @@
 body {
     background: white;
 }
+
 * {
     margin-left: 5% margin-right: 5%;
 }
 
 
-.top {
-    color: white;
-    background: white;
-    text-align: center;
-    border-radius: 10px;
-
-    height: 7vw;
-    min-height: 75px;
-    max-height: 200px;
-    padding: 0;
-
-}
 
 .top-logo {
 
+    margin-top: 2em;
     border-style: solid;
     border-color: black;
     border-radius:10px;
@@ -29,21 +19,21 @@ body {
     height: 7vw;
     min-height: 75px;
     max-height: 200px;
+    text-align: center;
 
-    margin-right: 0;
 }
 
 .user-controls {
+
+    margin-top: 2em;
     border-style: solid;
-    border-color: black;
+    border-color: green;
     border-radius:10px;
     color: black;
     background: white;
     height: 7vw;
     min-height: 75px;
     max-height: 200px;
-
-    margin-left: 0;
 
 }
 
