--- a/templates/base.html
+++ b/templates/base.html
@@ -43,18 +43,77 @@
             <!-- Main Content Pane Starts Here -->
 
 
+
             <div class="row">
 
+            <!-- Begin Individual Post Entries -->
 
-                <div class="row">
+                <div class="content-pane">
 
-                    <div class="col-md-12">
+                    <div class="row">
 
-                        <div class="content-pane">
+                        <div class="col-md-12">
 
-                            <p> Not The Top </p>
+                            <div class="content-box">
+
+                                <p> Not The Top </p>
+
+                            </div>
 
                         </div>
+
+                    </div>  
+
+                     <!-- burner div -->   
+                     <div class="row">
+
+                        <div class="col-md-12">
+
+                            <div class="content-box">
+
+                                <p> Not The Top </p>
+
+                            </div>
+
+                        </div>
+
+                    </div> 
+
+                    <!-- burner div -->   
+                     <div class="row">
+
+                        <div class="col-md-12">
+
+                            <div class="content-box">
+
+                                <p> Not The Top </p>
+
+                            </div>
+
+                        </div>
+
+                    </div> 
+
+                </div>
+
+            <!-- End Individual Post Entries -->
+            </div>
+
+        </div>
+
+    </body>
+
+    <footer>
+
+        <div class="container-fluid">
+
+            <div class="row">
+
+                <div class="col-md-12">
+
+                    <div class="footer-content">
+
+                    ending stuff
 
                     </div>
 
@@ -63,10 +122,6 @@
             </div>
 
         </div>
-
-    </body>
-
-    <footer>
 
     </footer>
 
