finshed basic layout and color scheme

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,9 +46,13 @@
 
             <div class="row">
 
-            <!-- Begin Individual Post Entries -->
+            <!-- Begin Content Pane Section -->
 
                 <div class="content-pane">
+
+            <!-- Begin Individual Posts -->
+
+            <!-- Begin Individual Post -->
 
                     <div class="row">
 
@@ -56,13 +60,52 @@
 
                             <div class="content-box">
 
-                                <p> Not The Top </p>
+                                <div class="row">
+
+                                    <div class="col-md-8">
+
+                                        <div class="post-title">
+
+                                            <h3> Generic Title </h3>
+
+                                        </div>
+
+                                    </div>
+
+                                    <div class="col-md-4">
+
+                                        <div class="post-author">
+
+                                            <h3> Generic Author </h3>
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
+
+                                <div class="row">
+
+                                    <div class="col-md-12">
+
+                                        <div class="post-content">
+
+                                             <p> Not The Top </p>
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
 
                             </div>
 
                         </div>
 
-                    </div>  
+                    </div>
+                    <!-- End Individual Post -->  
+
+
 
                      <!-- burner div -->   
                      <div class="row">
