--- a/css/basicblogstyle.css
+++ b/css/basicblogstyle.css
@@ -2,6 +2,10 @@ body {
     background: white;
 }
 
+.container-fluid{
+    padding-top: 0;
+}
+
 
 .top-logo {
 
@@ -27,15 +31,12 @@ body {
     border-color: green;
     border-radius:10px;
     color: black;
-    background: white;
+    background: green;
     height: 7vw;
     
 
 }
 
-.bottom{
-    background:black
-}
 
 .content-pane {
     margin-top: 5px;
@@ -56,9 +57,52 @@ body {
     max-height: 800px;
     height: 100%;
     border-style:solid;
-    border-color: black
+    border-color: black;
+    background: black;
+
+    padding-bottom: 5px;
 }
 
+.post-title {
+
+    margin-top: 0;
+    margin-left: 10px;
+    background-color: black;
+    color: white;
+    max-height: 25%;
+
+
+}
+
+.post-author {
+
+    border-radius: 10px;
+    background: #0d6ee5;
+    color: black;
+    margin-top: 0;
+    margin-bottom: 5px;
+    margin-right: 10px;
+    
+    height: 100%;
+
+}
+
+.post-content {
+    background: white;
+    color: black;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    
+    height: 250px;
+    border-radius: 10px;
+
+    padding: 5px 5px 5px 5px;
+
+    overflow: scroll;
+
+}
 .footer-content {
 
     margin-top: 1%;
