--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -36,17 +36,28 @@
 
 			<div class="row">
 
-				<div class="col-md-12">
+				<div class="col-md-4">
 
 					<div class="login-form">
 
-					<button type="submit" class="btn btn-primary"> Submit! </button>
+						<button type="submit" class="btn btn-primary"> Submit! </button>
+
+					</div>
+
+				</div>
+
+				<div class="col-md-8">
+
+					<div class="signup-link">
+
+						<a href="register.html"> Not a Member? Register! </a>
 
 					</div>
 
 				</div>
 
 			</div>
+
 
 		</form>
 
