--- a/templates/registration_page.html
+++ b/templates/registration_page.html
@@ -22,61 +22,65 @@
 
             </div>
 
-            <div class="row">
+            <form action="registration-parse.html" method="post">
 
-                <div class="col-md-12">
+	            <div class="row">
 
-                    <div class="signup-form">
+	                <div class="col-md-12">
 
-						<input type="email" class="form-control" id="email-input" aria-describedby="email-subtext" placeholder="email">
+	                    <div class="signup-form">
 
-                    </div>
+							<input type="email" class="form-control" name="email" id="email-input" aria-describedby="email-subtext" placeholder="email">
 
-                </div>
+	                    </div>
 
-            </div>
+	                </div>
 
-            <div class="row">
+	            </div>
 
-            	<div class="col-md-12">
+	            <div class="row">
 
-            		<div class="signup-form">
+	            	<div class="col-md-12">
 
-						<input type="password" class="form-control" id="password-input" placeholder="password">
+	            		<div class="signup-form">
 
-            		</div>
+							<input type="password" class="form-control" name="password" id="password-input" placeholder="password">
+
+	            		</div>
+
+	            	</div>
+
+	            </div>
+
+	            <div class="row">
+
+	            	<div class="col-md-12">
+
+	            		<div class="signup-form">
+
+							<input type="password" class="form-control" name="password_rep" id="password-input-repeat" placeholder="repeat password">
+
+	            		</div>
+
+	            	</div>
+
+	            </div>
+
+	             <div class="row">
+
+	            	<div class="col-md-12">
+
+	            		<div class="signup-form">
+
+							<button type="submit" class="btn btn-primary"> Submit! </button>
+
+	            		</div>
 
             	</div>
 
             </div>
 
-            <div class="row">
-
-            	<div class="col-md-12">
-
-            		<div class="signup-form">
-
-						<input type="password" class="form-control" id="password-input-repeat" placeholder="repeat password">
-
-            		</div>
-
-            	</div>
-
-            </div>
-
-             <div class="row">
-
-            	<div class="col-md-12">
-
-            		<div class="signup-form">
-
-						<button type="submit" class="btn btn-primary"> Submit! </button>
-						
-            		</div>
-
-            	</div>
-
-            </div>
+        </form>
 
         </div>
 
