--- a/templates/registration_page.html
+++ b/templates/registration_page.html
@@ -30,7 +30,14 @@
 
 	                    <div class="signup-form">
 
-							<input type="email" class="form-control" name="email" id="email-input" aria-describedby="email-subtext" placeholder="email">
+	                    	{% if email %}
+
+	                    		<input type="email" class="form-control" name="email" id="email-input" aria-describedby="email-subtext" value=" {{ email }} "> 
+	                    	{% else %}
+	                    	
+								<input type="email" class="form-control" name="email" id="email-input" aria-describedby="email-subtext" placeholder="email">
+
+							{% endif %}
 
 	                    </div>
 
