refactored unit tests to include penname, moved most unit tests to db_tests and made them actually work."

--- a/templates/registration_page.html
+++ b/templates/registration_page.html
@@ -51,6 +51,20 @@
 
 	            		<div class="signup-form">
 
+							<input type="text" class="form-control" name="penname" id="penname" placeholder="nom de plume">
+
+	            		</div>
+
+	            	</div>
+
+	            </div>
+
+	            <div class="row">
+
+	            	<div class="col-md-12">
+
+	            		<div class="signup-form">
+
 							<input type="password" class="form-control" name="password" id="password-input" placeholder="password">
 
 	            		</div>
