mostly finished functional test for user sign-up flow

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -40,7 +40,7 @@
 
 					<div class="login-form">
 
-						<button type="submit" class="btn btn-primary"> Submit! </button>
+						<button name ="login-submit" type="submit" class="btn btn-primary"> Submit! </button>
 
 					</div>
 
