added logging in with hashed cookie to end of registration flow, ending up back on index page logged in, updated functional tests accordingly

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -5,7 +5,11 @@
 
 	{% if user != 'None' %}
 
-		<h3> {{ user }} </h3>
+		<div class="user-greeting">
+
+			<h3> {{ user }} </h3>
+
+		</div>
 
 	{% else %}
 
