--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -13,7 +13,7 @@
 
 	{% else %}
 
-		<form>
+		<form action="login-parse.html" method="post">
 
 			<div class="row">
 
@@ -21,7 +21,7 @@
 
 					<div class="login-form">
 						<label for="email-input"> email: </label>
-						<input type="email" class="form-control" id="email-input" aria-describedby="email-subtext" placeholder="email">
+						<input type="email" class="form-control" name="user_id" id="user_id" aria-describedby="email-subtext" placeholder="email">
 
 					</div>
 
@@ -31,7 +31,7 @@
 
 					<div class="login-form">
 					<label for="password-input"> password: </label>
-					<input type="password" class="form-control" id="password-input" placeholder="password">
+					<input type="password" class="form-control" name="password" id="user_id" placeholder="password">
 					</div>
 
 				</div>
