--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -20,7 +20,7 @@
 				<div class="col-md-6">
 
 					<div class="login-form">
-						<label for="email-input"> email: </label>
+						<label for="user_id"> email: </label>
 						<input type="email" class="form-control" name="user_id" id="user_id" aria-describedby="email-subtext" placeholder="email">
 
 					</div>
@@ -30,8 +30,8 @@
 				<div class="col-md-6">
 
 					<div class="login-form">
-					<label for="password-input"> password: </label>
-					<input type="password" class="form-control" name="password" id="user_id" placeholder="password">
+					<label for="password"> password: </label>
+					<input type="password" class="form-control" name="password" id="password" placeholder="password">
 					</div>
 
 				</div>
@@ -75,55 +75,117 @@
 
 {% block posts_block %}
 
-<div class="row">
+	{% if posts|length > 0 %}
 
-    <div class="col-md-12">
+	{% for post in posts %}
 
-        <div class="content-box">
+	<div class="row">
 
-            <div class="row">
+	    <div class="col-md-12">
 
-                <div class="col-md-8">
+	        <div class="content-box">
 
-                    <div class="post-title">
+	            <div class="row">
 
-                        <h3> Generic Title </h3>
+	                <div class="col-md-8">
 
-                    </div>
+	                    <div class="post-title">
 
-                </div>
+	                        <h3> {{ post['title'] }} </h3>
 
-                <div class="col-md-4">
+	                    </div>
 
-                    <div class="post-author">
+	                </div>
 
-                        <h3> Generic Author </h3>
+	                <div class="col-md-4">
 
-                    </div>
+	                    <div class="post-author">
 
-                </div>
+	                        <h3> {{ post['author'] }} </h3>
 
-            </div>
+	                    </div>
 
-            <div class="row">
+	                </div>
 
-                <div class="col-md-12">
+	            </div>
 
-                    <div class="post-content">
+	            <div class="row">
 
-                         <p> Not The Top </p>
+	                <div class="col-md-12">
 
-                    </div>
+	                    <div class="post-content">
 
-                </div>
+	                         <p> {{ post['content'] }} </p>
 
-            </div>
+	                    </div>
 
-        </div>
+	                </div>
 
-    </div>
+	            </div>
 
-</div>
+	        </div>
+
+	    </div>
+
+	</div>
+
+	{% endfor %}
+
+	{% else %}
+
+	<div class="row">
+
+	    <div class="col-md-12">
+
+	        <div class="content-box">
+
+	            <div class="row">
+
+	                <div class="col-md-8">
+
+	                    <div class="post-title">
+
+	                        <h3> Generic Title </h3>
+
+	                    </div>
+
+	                </div>
+
+	                <div class="col-md-4">
+
+	                    <div class="post-author">
+
+	                        <h3> Generic Author </h3>
+
+	                    </div>
+
+	                </div>
+
+	            </div>
+
+	            <div class="row">
+
+	                <div class="col-md-12">
+
+	                    <div class="post-content">
+
+	                         <p> Not The Top </p>
+
+	                    </div>
+
+	                </div>
+
+	            </div>
+
+	        </div>
+
+	    </div>
+
+	</div>
+
+	{% endif %}
+
+
 
 {% endblock %}
                     <!-- End Individual Post --> 
