updated unit tests for login flow, began implementing blog posts with first unit test for default message on absence of any existing blog posts

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -169,7 +169,7 @@
 
 	                    <div class="post-content">
 
-	                         <p> Not The Top </p>
+	                         <p> No Posts Yet! </p>
 
 	                    </div>
 
