added web-facing blog parsing unit tests, successfully connected blog compose page to blog compose parse

--- a/templates/blog_compose_page.html
+++ b/templates/blog_compose_page.html
@@ -51,7 +51,7 @@
 
 	            		<div class="signup-form">
 
-							<input type="text" class="form-control" name="blog_title" id="blog_title" placeholder="title">
+							<input type="text" class="form-control" name="title" id="blog_title" placeholder="title">
 
 	            		</div>
 
@@ -67,7 +67,7 @@
 
 	            		<div class="blog-compose-field">
 
-							<textarea class="form-control" name="blog_content" id="blog_content" rows="10"> Start Writing! </textarea> 
+							<textarea class="form-control" name="content" id="blog_content" rows="10"> Start Writing! </textarea> 
 
 	            		</div>
 
