added logout mechanisms and associated unit tests, added single logout link to front page.

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -8,12 +8,13 @@
 		<div class="user-greeting">
 
 			<h3> {{ user }} </h3>
+			<a href="logout.html"> Logout </a>
 
 		</div>
 
 	{% else %}
 
-		<form action="login-parse.html" method="post">
+		<form action="login.html" method="post">
 
 			<div class="row">
 
