--- a/templates/registration_page.html
+++ b/templates/registration_page.html
@@ -22,7 +22,7 @@
 
             </div>
 
-            <form action="registration-parse.html" method="post">
+            <form action="register.html" method="post">
 
 	            <div class="row">
 
