added post editing capabilities and associated unit tests.

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -94,6 +94,7 @@
 	                    <div class="post-title">
 
 	                        <h3> {{ post['title'] }} </h3>
+	                        <a href="blog-edit.html?blog_id={{ post['id'] }}"> Edit Post! </a>
 
 	                    </div>
 
