--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -22,7 +22,7 @@
 
             </div>
 
-            <form action="login-parse.html" method="post">
+            <form action="login.html" method="post">
 
 	            <div class="row">
 
