began work separating templates for logged in vs non-logged in visitors.

--- a/templates/front_page_authed.html
+++ b/templates/front_page_authed.html
@@ -3,77 +3,19 @@
 
 {% block login_block %}
 
-	{% if user != 'None' %}
+	<div class="user-greeting">
 
-		<div class="user-greeting">
+		<h3> {{ user }} </h3>
+		<a href="logout.html"> Logout </a>
+		<a href="blog-compose.html"> Compose Post </a>
 
-			<h3> {{ user }} </h3>
-			<a href="logout.html"> Logout </a>
-			<a href="blog-compose.html"> Compose Post </a>
-
-		</div>
-
-	{% else %}
-
-		<form action="login.html" method="post">
-
-			<div class="row">
-
-				<div class="col-md-6">
-
-					<div class="login-form">
-						<label for="user_id"> email: </label>
-						<input type="email" class="form-control" name="user_id" id="user_id" aria-describedby="email-subtext" placeholder="email">
-
-					</div>
-
-				</div>
-
-				<div class="col-md-6">
-
-					<div class="login-form">
-					<label for="password"> password: </label>
-					<input type="password" class="form-control" name="password" id="password" placeholder="password">
-					</div>
-
-				</div>
-
-			</div>
-
-			<div class="row">
-
-				<div class="col-md-4">
-
-					<div class="login-form">
-
-						<button name ="login-submit" type="submit" class="btn btn-primary"> Submit! </button>
-
-					</div>
-
-				</div>
-
-				<div class="col-md-8">
-
-					<div class="signup-link">
-
-						<a href="register.html"> Not a Member? Register! </a>
-
-					</div>
-
-				</div>
-
-			</div>
-
-
-		</form>
-
-	{% endif %}
+	</div>
 
 {% endblock %}
 
 
 
-<!-- Begin Individual Post -->
+<!-- Begin Individual Posts -->
 
 {% block posts_block %}
 
@@ -135,16 +77,10 @@
 
 	            		<div class="post-likes">
 
-	            			{% if user != 'None' %}
-	            				<span id='likes{{ post["id"] }}'> {{ post['likes'] }} </span> <br>
+	            			
+            				<span id='likes{{ post["id"] }}'> {{ post['likes'] }} </span> <br>
 
-	            				<span id='like-button{{ post["id"] }}'> <button type="button" class="btn btn-success">Like!</button></span>
-
-	            			{% else %}
-
-	            				<a href="login.html"> Like! </a>
-
-	            			{% endif %}
+            				<span id='like-button{{ post["id"] }}'> <button type="button" class="btn btn-success">Like!</button></span>
 
 	            		</div>
 
