--- a/templates/front_page_authed.html
+++ b/templates/front_page_authed.html
@@ -80,7 +80,66 @@
 	            			
             				<span id='likes{{ post["id"] }}'> {{ post['likes'] }} </span> <br>
 
+            				{% if post['view_mode'] == 'like' %}
+
             				<span id='like-button{{ post["id"] }}'> <button type="button" class="btn btn-success">Like!</button></span>
+
+            				<!--
+
+							Begin Javascript "Like"
+							Adapted from "https://developer.mozilla.org/en-US/docs/AJAX/Getting_Started"
+								-->
+
+							<script type="text/javascript">
+
+								(function() {
+									var httpRequest;
+						  			document.getElementById('like-button{{ post["id"] }}').onclick = function() {makeRequest();};
+
+
+						    			function makeRequest(){
+						  					httpRequest = new XMLHttpRequest();
+						    				httpRequest.onreadystatechange = add_like;
+
+						    				httpRequest.open('GET', 'like.html?title_id={{ post["id"] }}');
+						    				httpRequest.send();
+						  			}
+
+
+						  			function add_like(){
+							  				if (httpRequest.readyState === XMLHttpRequest.DONE) {
+							      			if (httpRequest.status === 200) {
+							      			if (httpRequest.responseText === 'Success'){
+							        		
+							        		var old_like_text = document.getElementById('likes{{ post["id"] }}').innerText;
+							        		var you_text = ' you, '
+							        		var new_text = you_text.concat(old_like_text);
+							        		document.getElementById('likes{{ post["id"] }}').text = new_text;
+							        		
+							        		$('#like-button{{ post["id"] }}').addClass('btn btn-info').text('Liked!');
+							        		
+							        		}
+							        		// else here maybe?
+							      			} 
+							      			else {
+							        			alert('There was a problem with the request.');
+							      				}
+							    			}
+							    		}
+
+								})();
+
+							</script>
+
+							{% elif post['view_mode'] == 'edit' %}
+
+							<span id='like-button{{ post["id"] }}'> <button type="button" class="btn btn-primary">Edit!</button></span>
+
+							{% else %}
+
+							<span id='like-button{{ post["id"] }}'> <button type="button" class="btn btn-info">Liked</button></span>
+
+							{% endif %}
 
 	            		</div>
 
@@ -94,50 +153,7 @@
 
 	</div>
 
-	<!--
-
-	Begin Javascript "Like"
-	Adapted from "https://developer.mozilla.org/en-US/docs/AJAX/Getting_Started"
-		-->
-
-	<script type="text/javascript">
-
-		(function() {
-			var httpRequest;
-  			document.getElementById('like-button{{ post["id"] }}').onclick = function() {makeRequest();};
-
-
-    			function makeRequest(){
-  					httpRequest = new XMLHttpRequest();
-    				httpRequest.onreadystatechange = add_like;
-
-    				httpRequest.open('GET', 'like.html?title_id={{ post["id"] }}');
-    				httpRequest.send();
-  			}
-
-
-  			function add_like(){
-	  				if (httpRequest.readyState === XMLHttpRequest.DONE) {
-	      			if (httpRequest.status === 200) {
-	      			if (httpRequest.responseText === 'Success'){
-	        		
-	        		var old_like_text = document.getElementById('likes{{ post["id"] }}').innerText;
-	        		var you_text = ' you, '
-	        		var new_text = you_text.concat(old_like_text);
-	        		document.getElementById('likes{{ post["id"] }}').text = new_text;
-	        		$('#likes{{ post["id"] }}').text(new_text);
-	        		}
-	        		// else here maybe?
-	      			} 
-	      			else {
-	        			alert('There was a problem with the request.');
-	      				}
-	    			}
-	    		}
-
-		})();
-
-	</script>
+	
 
 	{% endfor %}
 
