--- a/templates/blog_compose_page.html
+++ b/templates/blog_compose_page.html
@@ -12,7 +12,7 @@
 
                 <div class="col-md-12">
 
-                    <div class="signup-form">
+                    <div class="blog-compose-title">
 
                         <h3> Compose Your Blog Post! </h3>
 
@@ -28,7 +28,7 @@
 
 	            	<div class="col-md-12">
 
-	            		<div class="signup-form">
+	            		<div class="blog-compose-title">
 
 	            			{% if title != 'None' %}
 
@@ -68,7 +68,7 @@
 
 	            	<div class="col-md-12">
 
-	            		<div class="signup-form">
+	            		<div class="blog-compose-button">
 
 							<button type="submit" class="btn btn-primary"> Post! </button>
 
