--- a/templates/blog_edit_page.html
+++ b/templates/blog_edit_page.html
@@ -12,7 +12,7 @@
 
                 <div class="col-md-12">
 
-                    <div class="signup-form">
+                    <div class="blog-compose-title">
 
                         <h3> Edit Your Blog Post </h3>
 
@@ -28,7 +28,7 @@
 
 	            	<div class="col-md-12">
 
-	            		<div class="signup-form">
+	            		<div class="blog-compose-title">
 
 	            			{% if title %}
 
@@ -76,7 +76,7 @@
 
 	            	<div class="col-md-12">
 
-	            		<div class="signup-form">
+	            		<div class="blog-compose-button">
 
 	            			<input type="hidden" name="blog_id" value="{{ blog_id }}">
 
