added functional test for checking user can't comment on own post, cleaned up spacing in test file

--- a/templates/blog_view_page_authed.html
+++ b/templates/blog_view_page_authed.html
@@ -60,6 +60,8 @@
 
 <!-- Add Comment -->
 
+{% if can_comment %}
+
 <div class="row">
 	
 		<div class="add-comment-box">
@@ -103,6 +105,7 @@
 		</div>
 	
 </div>
+{% endif %}
 
 
 <!-- Begin Comments -->
